--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -6,14 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.report.ReportFragment">
 
-    <com.anychart.AnyChartView
+<!--    <com.anychart.AnyChartView-->
+<!--        android:id="@+id/pieChart"-->
+<!--        android:layout_marginVertical="15sp"-->
+<!--        app:layout_constraintStart_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintBaseline_toTopOf="parent"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
+
+    <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
-        android:layout_marginVertical="15sp"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBaseline_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="32dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
