--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -77,7 +77,7 @@
                 android:fontFamily="@font/ralewaymedium"
                 android:layout_marginTop="15dp"
                 android:paddingLeft="10dp"
-                android:drawableEnd="@drawable/ic_eye"
+                android:drawableEnd="@drawable/ic_eye_open"
                 android:inputType="textPassword"
                 android:id="@+id/et_password"/>
 
@@ -93,15 +93,18 @@
                 android:layout_marginTop="15dp"
                 android:paddingLeft="10dp"
                 android:inputType="textPassword"
-                android:drawableEnd="@drawable/ic_eye"
+                android:drawableEnd="@drawable/ic_eye_close"
                 android:id="@+id/et_confirmpassword"/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign up"
+                android:text="Sign Up"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="@color/prim"
+                android:textAllCaps="false"
+                android:fontFamily="@font/ralewaymedium"
+                android:textSize="15dp"
                 android:id="@+id/btn_login"
                 />
 
