--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -9,12 +9,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:id="@+id/ll_fragment_add_toolbar">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_back"
+            android:src="@drawable/ic_arrow_left"
             android:padding="0dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
@@ -35,9 +38,9 @@
     </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/cd_add_transaction"
-        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_fragment_add_toolbar"
         android:padding="30dp">
 
         <LinearLayout
@@ -45,8 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:orientation="vertical"
+            android:paddingTop="10dp"
             android:paddingRight="20dp"
-            android:paddingLeft="20dp">
+            android:paddingLeft="20dp"
+            android:paddingBottom="10dp">
 
             <!--Memasukkan uang-->
             <LinearLayout
@@ -64,7 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Rp"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:paddingRight="20dp"
                     android:textColorHint="@color/black"
                     android:fontFamily="@font/ralewaymedium"
@@ -111,14 +116,16 @@
                     android:layout_marginRight="15dp"
                     android:src="@drawable/ic_calendar" />
 
-                <Button
-                    android:id="@+id/btn_add_calendar"
+                <EditText
+                    android:id="@+id/et_add_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="showDatePickerDialog"
                     android:padding="15dp"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/ralewaymedium"
                     android:textColor="@color/black"
-                    android:text="@string/pick_date"/>
+                    android:textColorHint="@color/black"
+                    android:hint="@string/pick_date"/>
 
             </LinearLayout>
 
@@ -140,7 +147,7 @@
                     android:padding="15dp"
                     android:textColor="@color/black"
                     android:hint="Notes"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:fontFamily="@font/ralewaymedium"
                     android:textColorHint="@color/black"/>
 
@@ -149,10 +156,13 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add"
+                android:text="add"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="@color/prim"
                 android:id="@+id/btn_add_transaction"
+                android:textAllCaps="false"
+                android:fontFamily="@font/ralewaymedium"
+                android:textSize="15dp"
                 />
 
         </LinearLayout>
