--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -10,32 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:padding="15dp"
         android:id="@+id/ll_fragment_add_toolbar">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_left"
-            android:padding="0dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_gravity="center"
-            android:id="@+id/back_transaction_page"
-            />
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Transaction"
             android:fontFamily="@font/ralewaymedium"
             android:textColor="@color/black"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:padding="0dp"
-            android:id="@+id/add_transaction_page"/>
+            android:id="@+id/tv_fragment_add_title"/>
 
     </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -77,7 +66,7 @@
                     android:digits="0123456789"
                     android:inputType="phone"
                     android:maxLength="10"
-                    android:id="@+id/et_amount"/>
+                    android:id="@+id/et_fragment_add_amount"/>
 
             </LinearLayout>
 
@@ -96,7 +85,7 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/spinner_category"
+                    android:id="@+id/spinner_fragment_add_category"
                     android:entries="@array/category"
                     android:padding="15dp"
                     android:autofillHints="Category"
@@ -117,7 +106,7 @@
                     android:src="@drawable/ic_calendar" />
 
                 <EditText
-                    android:id="@+id/et_add_calendar"
+                    android:id="@+id/et_fragment_add_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
@@ -141,7 +130,7 @@
                     android:src="@drawable/ic_notes" />
 
                 <EditText
-                    android:id="@+id/et_notes"
+                    android:id="@+id/et_fragment_add_notes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="15dp"
