--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -6,22 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".ui.report.ReportFragment">
 
-<!--    <com.anychart.AnyChartView-->
-<!--        android:id="@+id/pieChart"-->
-<!--        android:layout_marginVertical="15sp"-->
-<!--        app:layout_constraintStart_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintBaseline_toTopOf="parent"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent" />-->
+    <LinearLayout
+        android:id="@+id/ll_fragment_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoregular"
+            android:padding="5dp"
+            android:text="Expense"
+            android:textColor="@color/black"
+            android:textSize="14dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoregular"
+            android:padding="5dp"
+            android:text="Rp320.000"
+            android:textColor="@color/red"
+            android:textSize="16dp" />
+
+    </LinearLayout>
 
     <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pieChart"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="32dp"
-        />
+        android:id="@+id/pieChart_fragment_report"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        app:layout_constraintTop_toBottomOf="@+id/ll_fragment_report" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
