--- a/app/src/main/res/layout/item_transaction_container.xml
+++ b/app/src/main/res/layout/item_transaction_container.xml
@@ -9,38 +9,44 @@
 
     <ImageView
         android:id="@+id/iv_transaction_container_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/ic_hamburger"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_transaction_container_category"
-        tools:text="Food and Beverage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="25dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        android:fontFamily="@font/ralewayregular"
-        android:textColor="@android:color/primary_text_light"/>
+        android:layout_marginStart="15dp"/>
 
-    <TextView
-        android:id="@+id/tv_transaction_container_notes"
-        tools:text="lunch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_container_category"
-        app:layout_constraintStart_toStartOf="@+id/tv_transaction_container_category"
-        android:fontFamily="@font/ralewayregular"
-        android:textSize="12sp" />
+    <LinearLayout
+        android:id="@+id/ll_fragment_transaction_container"
+        android:layout_width="368dp"
+        android:layout_height="56dp"
+        android:layout_toEndOf="@id/iv_transaction_container_logo"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintStart_toEndOf="@+id/iv_transaction_container_logo"
+        tools:layout_editor_absoluteY="0dp">
+
+        <TextView
+            android:id="@+id/tv_transaction_container_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoregular"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            tools:text="Food and Beverage" />
+
+        <TextView
+            android:id="@+id/tv_transaction_container_notes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoregular"
+            android:textSize="12sp"
+            tools:text="lunch" />
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_transaction_container_amount"
@@ -49,11 +55,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="25dp"
-        android:fontFamily="@font/ralewayregular"
+        android:layout_marginEnd="15dp"
+        android:fontFamily="@font/latoregular"
         android:text="20.000"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
